test/should-fail/vsgc1240.f3
/*
 * @test/warning
 */

var y : String = "x";
for (x in y) { } 
